[gd_scene load_steps=5 format=3 uid="uid://chuq7owxfvdux"]

[ext_resource type="Script" uid="uid://bdgqhdhhyboqg" path="res://UI/Wands_UI/Wands Panel/wands_panel.gd" id="1_akhxv"]
[ext_resource type="PackedScene" uid="uid://cttoi0mn1tgww" path="res://UI/Spells_UI/Spell_Slot/Spell_Slot.tscn" id="2_qs1r7"]
[ext_resource type="PackedScene" uid="uid://bh51pyfnfc4dg" path="res://UI/Spells_UI/Spell_UI/Spell_UI.tscn" id="3_or8fc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1a2ak"]
bg_color = Color(0.6, 0.6, 0.6, 0.06666667)

[node name="Wands Panel" type="MarginContainer"]
size_flags_vertical = 4
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30
script = ExtResource("1_akhxv")
spellSlotScene = ExtResource("2_qs1r7")
spellScene = ExtResource("3_or8fc")

[node name="WandsVBOX" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Wand1Box" type="PanelContainer" parent="WandsVBOX"]
custom_minimum_size = Vector2(575, 180)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1a2ak")

[node name="MarginContainer" type="MarginContainer" parent="WandsVBOX/Wand1Box"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="WandsVBOX/Wand1Box/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="WandsVBOX/Wand1Box/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "WAND 1"

[node name="GridContainer" type="GridContainer" parent="WandsVBOX/Wand1Box/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
columns = 8

[node name="Wand2Box" type="PanelContainer" parent="WandsVBOX"]
custom_minimum_size = Vector2(575, 180)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1a2ak")

[node name="MarginContainer" type="MarginContainer" parent="WandsVBOX/Wand2Box"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="WandsVBOX/Wand2Box/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="WandsVBOX/Wand2Box/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "WAND 2"

[node name="GridContainer" type="GridContainer" parent="WandsVBOX/Wand2Box/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 8

[node name="Wand3Box" type="PanelContainer" parent="WandsVBOX"]
custom_minimum_size = Vector2(575, 180)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1a2ak")

[node name="MarginContainer" type="MarginContainer" parent="WandsVBOX/Wand3Box"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="WandsVBOX/Wand3Box/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="WandsVBOX/Wand3Box/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "WAND 3"

[node name="GridContainer" type="GridContainer" parent="WandsVBOX/Wand3Box/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 8

[node name="Wand4Box" type="PanelContainer" parent="WandsVBOX"]
custom_minimum_size = Vector2(575, 180)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1a2ak")

[node name="MarginContainer" type="MarginContainer" parent="WandsVBOX/Wand4Box"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="WandsVBOX/Wand4Box/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="WandsVBOX/Wand4Box/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "WAND 4"

[node name="GridContainer" type="GridContainer" parent="WandsVBOX/Wand4Box/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 8
